# tatodb

./: .gitignore  README.md
data/: update.sh  xmlize.php
hyperserver/: INSTALL.svn  callgrind.out.20430  callgrind.out.20619  configure.ac  default.xml  toto.xml.tmp
hyperserver/autom4te.cache/: output.0
hyperserver/doc/: Makefile.in  tatodbd.1
hyperserver/plugins/: Makefile.am  Makefile.in
hyperserver/plugins/swac/: Makefile.am  Makefile.in  plugin.ac  plugin_swac.c  sound.c  sound.h  swac.c
hyperserver/plugins/verbiste/: Makefile.am  plugin.ac  plugin_verbiste.c  plugin_verbiste.h
hyperserver/src/: Makefile.am  Makefile.in  args.c  debug.h  http.c  http.h  output.c  output.h  prout  prout.c  proutprout  signals.c  signals.h  simple_test.c  simple_test2.c  tatohyperdbd.c  test2  toto
libtato/: Makefile.am  Makefile.in  TODO  aclocal.m4  configure  configure.ac  tato.pc.in
libtato/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
libtato/pytato/: setup.py  tato_db.c  tato_db.h  tato_item.c  tato_item.h  tato_meta.c  tato_meta.h  tato_module.c  tato_module.h  tato_relation.c  tato_relation.h  test.py
libtato/tato/: Makefile.am  Makefile.in  data_parser.c  data_parser.h  db.c  db.h  fetcher.c  fetcher.h  fetcher_tree.c  fetcher_tree.h  hyper_data_parser.c  hyper_data_parser.h  hyperdb.c  hyperdb.h  hyperitem.c  hyperitem.h  hyperitems.c  hyperitems.h  hyperrelation.c  hyperrelation.h  hyperrelations.c  hyperrelations.h  item.c  item.h  kvlist.c  kvlist.h  lang.c  lang.h  list.c  list.h  log.c  log.h  relation.c  relation.h  relations.c  relations.h  tato.h  tree.h  tree_int.c  tree_int.h  (+4 more)
server/: Makefile.am  Makefile.in  configure  install-sh  ltmain.sh
server/autom4te.cache/: output.1  requests  traces.0  traces.1
server/doc/: Makefile.am
server/plugins/swac/: lang.c  lang.h  swac.h  (+2 more)
server/src/: Makefile.am  Makefile.in  args.c  args.h  http.c  http.h  output.c  output.h  plugin_common.h  plugins.c  plugins.h  pouetpouet.xml  signals.c  signals.h  tatodbd.c  toto.xml.tmp
(+1 files in other folders)
