lib_LTLIBRARIES = libtato.la
libtato_la_SOURCES = \
	data_parser.h \
	data_parser.c \
	hyper_data_parser.h \
	hyper_data_parser.c \
	db.c \
	hyperdb.c \
	fetcher.c \
	fetcher_tree.c \
	item.c \
	hyperitem.c \
	hyperitems.c \
	kvlist.c \
	lang.c \
	list.c \
	log.c \
	relation.c \
	relations.c \
	hyperrelation.c \
	hyperrelations.c \
	tree_int.c \
	tree_str.c \
	xml.c

library_includedir=$(includedir)/tato/
library_include_HEADERS = \
	tato.h \
	db.h \
	hyperdb.h \
	fetcher.h \
	fetcher_tree.h \
	item.h \
	hyperitem.h \
	hyperitems.h \
	kvlist.h \
	lang.h \
	list.h \
	log.h \
	relation.h \
	relations.h \
	hyperrelation.h \
	hyperrelations.h \
	tree.h \
	tree_int.h \
	tree_str.h \
	xml.h

